# voxle

./: Cargo.toml  README.md  TODO.md  gen_swiz.py  tmp
data/shaders/: ui.wgsl  world.wgsl
data/shaders/game/: block.wgsl  outline.wgsl
data/shaders/ui/: quad.wgsl
data/textures/: grass.aseprite
data/textures/blocks/: blocks.json
src/: gfx.rs  gui.rs  imgui.rs  main.rs  math.rs  scene.rs  shader_2d.wgsl  shader_3d.wgsl  state.rs
src/game/: camera.rs  chunk.rs  mod.rs  texture.rs  worldgen.rs
src/game/renderer/: chunk.rs  mod.rs  ui.rs
src/gfx/: graph.rs
src/polyfill/: mod.rs  winit_egui.rs
src/states/game/: camera.rs  chunk.rs  mod.rs  renderer.rs
src/states/game/renderer/: chunk.rs  mod.rs
