[package]
name = "voxle"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
bson = "2.7.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.20"
nalgebra-glm = "0.18.0"
pollster = "0.3.0"
serde = "1.0.189"
serde_derive = "1.0.189"
shipyard = "0.6.2"
wgpu = "0.17.1"
winit = { version = "0.29.2", default-features = false, features = ["rwh_05", "x11"] }
raw-window-handle = "0.5.2"
num-traits = "0.2"
num-derive = "0.4"
noise = "0.8.2"
std140 = "0.2.6"
rand = "0.8.5"
egui = "0.23.0"
egui_winit_platform = "0.20.0"
egui_wgpu_backend = "0.26.0"
wgpu_text = "0.8.4"
num = "0.4.1"
image = "0.24.7"
static_assertions = "1.1.0"
json = "0.12.4"
regex = "1.10.2"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1
overflow-checks = false
